[workspace]

members = [
  "memfaultd",
  "memfaultc-sys",
  "memfault-ssf"
]
resolver = "2"

[profile.release]
# We do not handle FFI unwinding so we need to keep panic abort for now.
panic="abort"
opt-level = "z"

[profile.dev]
panic="abort"

[workspace.lints.clippy]
unwrap_used = "deny"
redundant_clone = "deny"
