[package]
name = "memfault-ssf"
version = "1.21.0"
edition = "2021"
description = "Supporting crate for the Memfault memfaultd embedded Linux agent"
homepage = "https://github.com/memfault/memfaultd"
documentation = "https://docs.memfault.com/"
license-file = "License.txt"
readme = "README.md"
repository = "https://github.com/memfault/memfaultd"

[dependencies]
futures = "0.3.31"
log = "0.4"
tokio = { version = "1.43.0", features = ["sync", "macros", "rt", "net"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
